<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:tools="http://schemas.android.com/tools">
    <include
        layout="@layout/common_toolbar"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_change_psd"
            style="@style/TextView_Right_Bar"
            android:padding="15dp"
            android:layout_marginLeft="0dp"
            android:background="@color/white"
            android:text="@string/modify_psd"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_update"
            style="@style/TextView_Right_Bar"
            android:padding="15dp"
            android:layout_marginLeft="0dp"
            android:background="@color/white"
            android:text="@string/update_app"/>
        <View
            style="@style/Horizontal_Line"
            android:layout_marginLeft="15dp"/>
        <LinearLayout
            android:id="@+id/ll_clean"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginLeft="0dp"
                android:background="@color/white"
                android:textSize="@dimen/ts_lel_two"
                android:textColor="@color/primary_text_black"
                android:text="@string/clean_cache"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_cacheSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1.3MB"
                android:textSize="@dimen/ts_lel_three"
                android:layout_marginRight="15dp"
                android:drawableRight="@mipmap/ic_right"
                android:drawablePadding="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_suggest"
            style="@style/TextView_Right_Bar"
            android:padding="15dp"
            android:layout_marginLeft="0dp"
            android:background="@color/white"
            android:text="@string/suggest"/>
        <View
            style="@style/Horizontal_Line"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/tv_service"
            style="@style/TextView_Right_Bar"
            android:padding="15dp"
            android:layout_marginLeft="0dp"
            android:background="@color/white"
            android:text="@string/contact_service"/>
        <View
            style="@style/Horizontal_Line"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/tv_about"
            style="@style/TextView_Right_Bar"
            android:padding="15dp"
            android:layout_marginLeft="0dp"
            android:background="@color/white"
            android:text="@string/about"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/bt_exit"
        style="@style/Button_Red"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="1dp"
        android:text="@string/user_exit"/>
</LinearLayout>