<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="40dp"
        android:minHeight="120dp"
        android:src="@mipmap/img_logo"
        android:id="@+id/imageView"/>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_login_user"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/input_phoneNum"
            android:textSize="@dimen/ts_lel_three"
            android:inputType="phone"
            android:maxLength="11"
            android:minHeight="50dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <ImageView
        style="@style/Horizontal_Line"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_login_psd"/>

        <EditText
            android:id="@+id/et_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/input_psd"
            android:inputType="textPassword"
            android:textSize="@dimen/ts_lel_three"
            android:maxLength="16"
            android:minHeight="50dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <ImageView
        style="@style/Horizontal_Line"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:text="@string/forgot_psd"
        android:textSize="@dimen/ts_lel_four"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/bt_login"
        style="@style/Button_Red"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/login"/>

    <Button
        android:id="@+id/bt_register"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin_sub"
        android:text="@string/register"
        android:textSize="@dimen/ts_lel_two"/>
</LinearLayout>